feat: implement subscriber management features
- Add use cases for subscribing, unsubscribing, and retrieving subscribers.
- Create a Supabase repository for subscriber operations.
- Implement admin authentication with password verification.
- Add newsletter subscription form and hooks for managing subscriptions.
- Create database migrations for subscribers and admin settings tables.
- Update UI components for job applications and perks sections for consistency.
- Refactor contact section emails to use the correct domain.

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,7 @@
 
 [build.environment]
   NODE_VERSION = "20"
-  NEXT_PUBLIC_SITE_URL = "https://fairplayafrica.com"
+  NEXT_PUBLIC_SITE_URL = "https://fairplay.africa"
 
 # Next.js plugin for Netlify
 [[plugins]]
